// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopupProgressIndicator should render 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": undefined,
      "type": 0,
    }
  }
  hidden={false}
  minWidth={800}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
>
  <StyledProgressIndicatorBase />
</StyledWithResponsiveMode>
`;

exports[`PopupProgressIndicator should render with loading description 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": undefined,
      "type": 0,
    }
  }
  hidden={false}
  minWidth={800}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
>
  <StyledProgressIndicatorBase
    description="round and round we go"
  />
</StyledWithResponsiveMode>
`;

exports[`PopupProgressIndicator should render with loading title 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": "loading...",
      "type": 0,
    }
  }
  hidden={false}
  minWidth={800}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
>
  <StyledProgressIndicatorBase />
</StyledWithResponsiveMode>
`;

exports[`PopupProgressIndicator should render with the whole nine yards 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": "loading",
      "type": 0,
    }
  }
  hidden={false}
  minWidth={800}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
>
  <StyledProgressIndicatorBase
    description="round and round we go"
  />
</StyledWithResponsiveMode>
`;

exports[`PopupProgressIndicator should render with title 1`] = `
<StyledWithResponsiveMode
  dialogContentProps={
    Object {
      "title": "title1",
      "type": 0,
    }
  }
  hidden={false}
  minWidth={800}
  modalProps={
    Object {
      "isBlocking": true,
    }
  }
>
  <StyledProgressIndicatorBase />
</StyledWithResponsiveMode>
`;
